package co.com.andres.models.entities;

public enum StateBook {
    AVAILABLE, // diponible
    LOANED  // prestado
}
