package co.com.andres.models.entities;

public enum StateLoan {
    ACTIVE, // activo
    NOT_ACTIVE // no activo
}
