package co.com.andres.models.entities;

public enum StateUser {
    WITHOUT_LOAN,    // Sin préstamo
    WITH_LOAN       // Con préstamo
}

