@startuml

enum StateBook {
    AVAILABLE
    LOANED
}

enum StateUser {
    WITHOUT_LOAN
    WITH_LOAN
}

enum StateLoan {
    ACTIVE
    NOT_ACTIVE
}

entity "Users" {
    * idUser : Long <<PK>>
    --
    * name : String
    * lastName : String
    * email : String
    phone : String
    * address : String
    * dateRegistration : LocalDate
    * stateUser : StateUser
}

entity "Books" {
    * bookId : Long <<PK>>
    --
    * title : String
    * author : String
    * isbn : String <<unique>>
    * yearOfPublication : LocalDate
    * gender : String
    * state : StateBook
}

entity "Loans" {
    * idLoan : Long <<PK>>
    --
    * idBook : Books <<FK>>
    * idUser : Users <<FK>>
    * loanDate : LocalDate
    * stateLoan : StateLoan
}

Users "1" -- "N" Loans : "realiza"
Books "1" -- "N" Loans : "es prestado en"

StateBook -- Books : "define estado"
StateUser -- Users : "define estado"
StateLoan -- Loans : "define estado"

@enduml 